--- a/ToDo.txt
+++ b/ToDo.txt
@@ -6,3 +6,7 @@ Conversion functions needed:
 - Feet to Inches
 - Degrees to Radians
 
+Implementation
+
+Probably better to write different functions for each conversion,
+instead of handling all conversions in a single function
